--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^4.3.2",
-    "styled-reset-advanced": "^1.0.3"
+    "styled-reset-advanced": "^1.0.3",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.1.11",
