--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "gatsby": "^2.15.6",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-manifest": "^2.2.14",
@@ -49,11 +51,11 @@
     "styled-reset-advanced": "^1.0.3"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addon-notes": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-links": "^5.3.13",
+    "@storybook/addon-notes": "^5.3.13",
+    "@storybook/addons": "^5.3.13",
+    "@storybook/react": "^5.3.13",
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
